Remove MongoDb form message thread